<resources>
    <string name="app_name">montserratak</string>

    <!-- Textos para Login y Registro -->
    <string name="BTMLOGIN">Login</string>
    <string name="BTMREGISTRO">Registre</string>
    <string name="correoEt">E-mail</string>
    <string name="nombreEt">Nom</string>
    <string name="passEt">Password</string>
    <string name="fechaTxt">Data</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Password</string>
    <string name="BtnLogin">ENTRAR</string>
    <string name="tancarSessio">Tancar Sessió</string>

    <!-- Puntuaciones y usuario -->
    <string name="miPuntuaciotxt">Puntuació</string>
    <string name="puntuacio"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nom"> -- </string>

    <!-- Menú Principal -->
    <string name="MenuTxt">MENÚ</string>
    <string name="jugarBtn">Jugar</string>
    <string name="PuntuacionsBtn">Puntuacions</string>
    <string name="CreditsBtn">Crèdits</string>
    <string name="play">Play</string>

    <!-- NUEVOS TEXTOS PARA EL JUEGO -->
    <string name="game_over">Game Over</string>
    <string name="tap_to_restart">Toca para reiniciar</string>
    <string name="high_score">Puntuació més alta: %d</string>
    <string name="current_score">Puntuació actual: %d</string>
    <string name="new_high_score">Nou rècord!</string>
</resources>
