<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58FA58"
    tools:context=".Registro">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correoEt"
            android:minHeight="48dp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passEt"
            android:minHeight="48dp"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nombreEt"
            android:minHeight="48dp"
            android:autofillHints="name" />

        <TextView
            android:id="@+id/fechaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</RelativeLayout>
